# megrez

./: .gitignore  CMakeLists.txt  README.md
include/: megrez.hpp  megrez_constants.hpp  megrez_smallvec.hpp  megrez_utility.hpp
src/: megrez.cpp  megrez_smallvec.cpp  megrez_utility.cpp
